// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActiveColorToggles matches snapshot 1`] = `
"<div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
  <div class=\\"layout horizontal\\"><span class=\\"max-width text-small team-name wrap-anywhere\\">Team One</span><span class=\\"max-width text-small team-name wrap-anywhere text-right m-l-6\\">Team Two (Really long name for te...</span></div>
  <div class=\\"layout horizontal m-t-4\\">
    <div class=\\"color-display text-right\\" style=\\"color: rgb(24, 30, 41);\\" data-test=\\"team-a-color-display\\">α</div>
    <div class=\\"color-display m-l-6\\" style=\\"color: rgb(24, 30, 41);\\" data-test=\\"team-b-color-display\\">β</div>
  </div>
  <div class=\\"layout horizontal m-t-6 color-toggle-container\\">
    <div class=\\"color-toggle layout horizontal center-vertical center-horizontal\\" data-test=\\"color-toggle-previous\\">
      <font-awesome-icon-stub icon=\\"chevron-left\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"icon-left\\"></font-awesome-icon-stub>
      <div class=\\"color\\" style=\\"border-color: #181e29; background-color: rgb(4, 217, 118);\\"></div>
      <div class=\\"color\\" style=\\"border-color: white; background-color: rgb(214, 0, 171);\\"></div>
    </div><a class=\\"ipl-button m-l-6\\" href=\\"javascript:void(0);\\" style=\\"background-color: rgb(97, 85, 189); color: white;\\" data-test=\\"swap-colors-button\\"><span class=\\"label\\">Swap</span></a>
    <div class=\\"color-toggle layout horizontal center-vertical center-horizontal m-l-6\\" data-test=\\"color-toggle-next\\">
      <div class=\\"color\\" style=\\"border-color: #181e29; background-color: rgb(254, 242, 50);\\"></div>
      <div class=\\"color\\" style=\\"border-color: #181e29; background-color: rgb(46, 210, 254);\\"></div>
      <font-awesome-icon-stub icon=\\"chevron-right\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"icon-right\\"></font-awesome-icon-stub>
    </div>
  </div>
</div>"
`;

exports[`ActiveColorToggles matches snapshot with swapped colors 1`] = `
"<div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
  <div class=\\"layout horizontal\\"><span class=\\"max-width text-small team-name wrap-anywhere\\">Team One</span><span class=\\"max-width text-small team-name wrap-anywhere text-right m-l-6\\">Team Two (Really long name for te...</span></div>
  <div class=\\"layout horizontal m-t-4\\">
    <div class=\\"color-display text-right\\" style=\\"color: rgb(24, 30, 41);\\" data-test=\\"team-a-color-display\\">β</div>
    <div class=\\"color-display m-l-6\\" style=\\"color: rgb(24, 30, 41);\\" data-test=\\"team-b-color-display\\">α</div>
  </div>
  <div class=\\"layout horizontal m-t-6 color-toggle-container\\">
    <div class=\\"color-toggle layout horizontal center-vertical center-horizontal\\" data-test=\\"color-toggle-previous\\">
      <font-awesome-icon-stub icon=\\"chevron-left\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"icon-left\\"></font-awesome-icon-stub>
      <div class=\\"color\\" style=\\"border-color: #181e29; background-color: rgb(4, 217, 118);\\"></div>
      <div class=\\"color\\" style=\\"border-color: white; background-color: rgb(214, 0, 171);\\"></div>
    </div><a class=\\"ipl-button m-l-6\\" href=\\"javascript:void(0);\\" style=\\"background-color: rgb(97, 85, 189); color: white;\\" data-test=\\"swap-colors-button\\"><span class=\\"label\\">Swap</span></a>
    <div class=\\"color-toggle layout horizontal center-vertical center-horizontal m-l-6\\" data-test=\\"color-toggle-next\\">
      <div class=\\"color\\" style=\\"border-color: #181e29; background-color: rgb(254, 242, 50);\\"></div>
      <div class=\\"color\\" style=\\"border-color: #181e29; background-color: rgb(46, 210, 254);\\"></div>
      <font-awesome-icon-stub icon=\\"chevron-right\\" border=\\"false\\" fixedwidth=\\"false\\" listitem=\\"false\\" pulse=\\"false\\" swapopacity=\\"false\\" spin=\\"false\\" symbol=\\"false\\" inverse=\\"false\\" class=\\"icon-right\\"></font-awesome-icon-stub>
    </div>
  </div>
</div>"
`;
